corrected z-index

--- a/styles.css
+++ b/styles.css
@@ -274,7 +274,7 @@
   border-radius: 4px;
   padding: 4px;
   font-size: 12px;
-  z-index: 10;
+  z-index: 5;
   border: 1px solid #185abc;
   overflow: hidden;
   pointer-events: auto;
